# learnwise-fb

./: .gitignore  Dockerfile  devserver.sh  filelist.txt  pyproject.toml
models/: user_ratings.joblib
src/: main.py
