[tool.poetry]
name = "python-flask"
version = "0.1.0"
description = "Start a simple web app with the Flask framework for Python"
authors = ["Google LLC"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.3"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
joblib = "^1.4.2"
scikit-learn = "^1.6.1"
numpy = "^2"
implicit = "^0.7.2"
pandas = "^2.2.3"

[tool.poetry.scripts]
app = 'src.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
